# sklearn-callbacks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
examples/: convergence-monitor-ridge.py  logging-pipeline.py  progressbar-pipeline.py  progressbar-sgdclassifier.py
sklearn_callbacks/: __init__.py  _computational_graph.py  _convergence_monitor.py  _debug.py  _progressbar.py
sklearn_callbacks/tests/: test_computational_graph.py  test_convergence_monitor.py  test_debug.py  test_estimators.py
