[metadata]
name = sklearn-callbacks
description = "Experimental callbacks for scikit-learn: progress bars, monitoring convergence etc."
url = "https://github.com/rth/sklearn-callbacks"
long_description = file: README.md
license = BSD-3-clause
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
